--- a/Modelling-Optical Fibre Communications/Std Modelling Fibre Systems.ipynb
+++ b/Modelling-Optical Fibre Communications/Std Modelling Fibre Systems.ipynb
@@ -416,10 +416,19 @@
     "\n",
     "   * A fibre with loss 0.3 dB/km, Dispersion $D$=-20 ps/nm/km, \n",
     "   * A source at $\\lambda=$1.55 $\\mu$m and bandwidth $\\delta\\lambda=$0.2 nm with a peak power of 1 mW\n",
-    "   * A detector with a NEP=2 pW/√Hz and bandwidth limited appropriately for the signal transmitted\n",
+    "   * A detector with a NEP=2 pW/√Hz\n",
+    "   and bandwidth limited appropriately for the signal transmitted\n",
     "   * Note: be very careful about units in your code!\n",
     "\n",
-    "For operation at (a) $B=$1 Gb/sec and (b) $B=$10 Gb/sec, try to determine whether the fibre link is loss or dispersion limited using your simulations and find out what that limiting propagation distance is for each case.  You should be able to judge by from the eye diagrams when transmission becomes problematic, but try to make an estimate of the likely error in your estimation of limiting length.  With the full model including noise you might also be able to optimise your transmitted pulse width to give best performance.  These results should be the main results that you present in your report."
+    "For operation at (a) $B=$1 Gb/sec and (b) $B=$10 Gb/sec,\n",
+    "\n",
+    "try to determine whether the fibre link is loss or dispersion limited using your simulations and \n",
+    "\n",
+    "find out what that limiting propagation distance is for each case.  \n",
+    "\n",
+    "You should be able to judge by from the eye diagrams when transmission becomes problematic, but try to make an estimate of the likely error in your estimation of limiting length.  \n",
+    "\n",
+    "With the full model including noise you might also be able to optimise your transmitted pulse width to give best performance.  These results should be the main results that you present in your report."
    ]
   },
   {
